--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A simple Text sharing website.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./backend/server.js"
+    "start": "node ./backend/server.js",
+    "dev": "nodemon ./backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "type": "module",
   "author": "Sohail Khan",
