--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "A simple Text sharing website.",
   "main": "server.js",
   "scripts": {
-    "start": "node ./server.js",
-    "dev": "nodemon ./server.js",
+    "start": "node ./backend/server.js",
+    "dev": "nodemon ./backend/server.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "type": "module",
