--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^8.2.3"
+    "mongoose": "^8.2.3",
+    "socket.io": "^4.8.1"
   }
 }
