Update: add cors for Socket

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -11,5 +11,28 @@
             "src": "/(.*)",
             "dest": "server.js"
         }
+    ],
+    "headers": [
+        {
+            "source": "/socket.io/(.*)",
+            "headers": [
+                {
+                    "key": "Access-Control-Allow-Origin",
+                    "value": "https://tshare-frontend.vercel.app"
+                },
+                {
+                    "key": "Access-Control-Allow-Methods",
+                    "value": "GET, POST, OPTIONS"
+                },
+                {
+                    "key": "Access-Control-Allow-Headers",
+                    "value": "Content-Type, Authorization"
+                },
+                {
+                    "key": "Access-Control-Allow-Credentials",
+                    "value": "true"
+                }
+            ]
+        }
     ]
 }
