--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node ./server.js",
-    "dev": "nodemon ./server.js",
+    "dev": "nodemon ./server.js && redis-server",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "type": "module",
@@ -15,11 +15,13 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "crypto-random-string": "^5.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-async-handler": "^1.2.0",
+    "ioredis": "^5.5.0",
     "mongoose": "^8.2.3",
     "socket.io": "^4.8.1"
   }
