--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "A simple Text sharing website.",
   "main": "server.js",
   "scripts": {
-    "start": "node ./server.js",
-    "dev": "nodemon ./server.js && redis-server",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
-  },
+  "start": "concurrently \"redis-server\" \"node ./server.js\"",
+  "dev": "concurrently \"redis-server\" \"nodemon ./server.js\"",
+  "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+},
   "type": "module",
   "author": "Sohail Khan",
   "license": "ISC",
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "compression": "^1.8.0",
+    "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "crypto-random-string": "^5.0.0",
     "dotenv": "^16.4.5",
