--- a/backend/package.json
+++ b/backend/package.json
@@ -22,9 +22,11 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-async-handler": "^1.2.0",
+    "fs": "^0.0.1-security",
     "ioredis": "^5.5.0",
     "mongoose": "^8.2.3",
     "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "socket.io": "^4.8.1"
   }
 }
