--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,19 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.1.4",
-    "prismjs": "^1.29.0",
+    "lucide-react": "^0.344.0",
+    "next": "^14.2.25",
     "react": "^18",
     "react-dom": "^18",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/prismjs": "^1.26.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "daisyui": "^4.9.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
