--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ next-env.d.ts
 node_modules
 backend/dump.rdb
 .vscode/extensions.json
+backend/frontend/package-lock.json
+backend/package-lock.json
+package-lock.json
