--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,11 @@
   "version": "1.0.0",
   "description": "A website where you can share text and files.",
   "main": "server.js",
-"scripts": {
-  "start": "node ./server.js",
-  "dev": "nodemon ./server.js",
-  "build": "npm install"
-},
+  "scripts": {
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js",
+    "build": "npm install"
+  },
   "type": "module",
   "author": "Sohail Khan",
   "license": "ISC",
@@ -15,11 +15,12 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "compression": "^1.8.0",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
     "crypto-random-string": "^5.0.0",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.5.0",
     "express": "^4.19.1",
     "express-async-handler": "^1.2.0",
     "fs": "^0.0.1-security",
