--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.19.1",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.5.0",
     "fs": "^0.0.1-security",
     "ioredis": "^5.5.0",
     "mongoose": "^8.2.3",
